# overheat-punisher

./: .gitignore  OVERHEAT_SPEC.md  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/analysis/: __init__.py  game_analyzer.py  overheat_analyzer.py
src/capture/: __init__.py  screen_capture.py
src/detection/: __init__.py  hud_detection.py
src/tests/: test_screen_capture.py
src/utility/: __init__.py  clean_agents_and_flip.py  coordinate_explorer_script.py
tests/: test_hud_detection.py  test_screen_capture.py
