[project]
name = "overheat-punisher"
dynamic = ["version"]
description = "hispanic parenting simulator when I do stupid plays in valorant"
authors = [{name= "Oskar Hernandez", email= "oskadez@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr==1.7.2",
    "filelock==3.16.1",
    "fsspec==2024.10.0",
    "imageio==2.36.0",
    "iniconfig==2.0.0",
    "jinja2==3.1.4",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "mss==9.0.2",
    "networkx==3.4.2",
    "ninja==1.11.1.1",
    "numpy==2.1.3",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "packaging==24.2",
    "pillow==11.0.0",
    "pluggy==1.5.0",
    "pyclipper==1.3.0.post6",
    "python-bidi==0.6.3",
    "pyyaml==6.0.2",
    "scikit-image==0.24.0",
    "scipy==1.14.1",
    "shapely==2.0.6",
    "sympy==1.13.1",
    "tifffile==2024.9.20",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "typing-extensions==4.12.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
markers = [
  "unit: Mark a test as unit test"
]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/_version.py"
template = '''
version = "{version}"
'''
