[project]
name = "overheat-punisher"
dynamic = ["version"]
description = "hispanic parenting simulator when I do stupid plays in valorant"
authors = [{name= "Oskar Hernandez", email= "oskadez@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru~=0.7",
    "easyocr~=1.7",
    "filelock~=3.16",
    "fsspec~=2024.10",
    "imageio~=2.36",
    "iniconfig~=2.0",
    "jinja2~=3.1",
    "lazy-loader~=0.4",
    "markupsafe~=3.0",
    "mpmath~=1.3",
    "mss~=9.0",
    "networkx~=3.4",
    "ninja~=1.11",
    "numpy~=2.1",
    "opencv-python~=4.10",
    "packaging~=24.2",
    "pillow~=11.0",
    "pluggy~=1.5",
    "pyclipper~=1.3",
    "python-bidi~=0.6",
    "pyyaml~=6.0",
    "scikit-image~=0.24",
    "scipy~=1.14",
    "shapely~=2.0",
    "sympy~=1.13",
    "tifffile~=2024.9",
    "torch~=2.6",
    "torchvision~=0.20",
    "typing-extensions~=4.12",
    "pydantic>=2.11.7",
    "keyboard>=0.13.5",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
]

[tool.pytest.ini_options]
markers = [
  "unit: Mark a test as unit test"
]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/_version.py"
template = '''
version = "{version}"
'''
